[package]
name = "blume"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
proptest = "1"
rstest = "0.23"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[test]]
name = "serde"
required-features = ["serde"]

[[bench]]
name = "bloom_filter"
harness = false

[[bench]]
name = "counting_filter"
harness = false

[[bench]]
name = "atomic_bloom_filter"
harness = false


[dependencies]
ahash = "0.8"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
